@@ -30,3 +30,6 @@ GET film.slug.error.missing.execute /iawl 501
 ## Once the films are in the database, we can now edit them without needing
 ## all of the fields specified.
 PATCH film.slug / (module.path.join films.edit.csj) 200 {"records": 3}
+
+## Broken CSJ leads to a 400 error
+PATCH film.slug / (module.path.join films.edit.broken.csj) 400
