@@ -1,5 +1,6 @@
 2020-04-22  Kirit Saelensminde  <kirit@felspar.com>
  * CSJ parsing now throws a proper `parse_error`
+ * Special case `parse_error` to map to 400 responses when expected in fg tests.
 
 2019-08-21  Kirit Saelensminde  <kirit@felspar.com>
  Improve the display of test failures from `fostgres-test`.
